--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 <ul>
 <li>元素——包括天、地、山、土、水、火、命七种元素、七类生物、七种稀有掉落物、七种元素之力、七种药剂。这些稀有掉落物也用于机器、工具的合成和仪式等。</li>
 <li>经验——大幅提高了经验的用途，取出经验后使用附魔之瓶可以制作出模组合成器、附魔矿物、各种工具、机器、法杖等，机器和仪式也需要经验。</li>
-<li>机器——集磨粉炼矿增殖反应晒盐造石造冰于一体的9状态多功能一体机；用于获取绿宝石和附魔之瓶的交易机；代替人力处理物品的物品处理机；召唤生物的生物投影仪；提供正负面效果的信标增强仪；更便捷强大的附魔处理的金砧等。</li>
+<li>机器——集磨粉炼矿增殖反应晒盐造石造冰于一体的9状态多功能一体机；用于获取绿宝石和附魔之瓶的交易机；代替人力处理物品的物品处理机；召唤生物的生物投影仪；提供正负面效果的信标增强器；更便捷强大的附魔处理的金砧等。</li>
 <li>傀儡——科技线的终端，全自动种田伐木钓鱼杀怪畜牧的傀儡。</li>
 <li>研究——需要玩家测定的矿物熔炼配比参数，需要玩家测定的附魔书仪式物品对应，和20种需要杂交获取的植物，满足你的研究欲望。</li>
 <li>食物装饰——41种植物、82种食物、79种头颅、21种头饰服饰、40种新春装饰、50种经典画作、103种纸片人、16种告示牌、100种称号，装点自己也装点自己的家。</li>
@@ -391,17 +391,17 @@
 <tbody>
 	<tr>
 		<td>Java版 21w03a</td>
-		<td>v1.12-0121</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0121">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0121">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0121.zip">其它</a></td>
+		<td>v1.12-0125</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0125">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0125">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0125.zip">其它</a></td>
 	</tr>
 	<tr>
-		<td>Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-0121</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0121">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0121">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0121.zip">其它</a></td>
+		<td>Java版 1.16.2-1.16.5</td>
+		<td>v1.11.2-0125</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0125">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0125">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0125.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -485,7 +485,7 @@
 <p>在主世界/花世界中将大型花摆放成正八边形，然后在中间放置白色羊毛即可激活至花世界/主世界的传送门。注意传送门是单向的，请携带返回传送门的材料。</p>
 <figure>
 	<img style="height:260px" src="items/screenshots/flower_world.png" title="花世界传送门" />
-	<figcaption>图 花世界传送门和图腾柱</figcaption>
+	<figcaption>图 花世界传送门和附魔室</figcaption>
 </figure>
 <figure>
 	<img style="height:260px" src="items/screenshots/flower_portal.png" title="花世界传送门" />
@@ -905,7 +905,7 @@
 <!--==================================================================-->
 <h2 id="掉落物">掉落物</h2>
 <table><thead><tr>
-	<th style="width:6em;">物品</th>
+	<th style="width:7em;">物品</th>
 	<th>图案</th>
 	<th>命名空间ID</th>
 	<th>来源</th>
@@ -1469,7 +1469,7 @@
 	</span></td></tr>
 </tbody></table>
 <figure>
-	<img style="height:200px" src="items/screenshots/crafting_machine.png" alt="合成器机器界面" />
+	<img style="height:160px" src="items/screenshots/crafting_machine.png" alt="合成器机器界面" />
 	<figcaption>图 合成器界面</figcaption>
 </figure>
 <p>将物品放入合成器界面左侧九宫格输入栏即可自动合成出产物。</p>
@@ -1494,7 +1494,7 @@
 </tr>
 </tbody></table>
 <figure>
-	<img style="height:200px" src="items/screenshots/all_in_one_machine.png" alt="多功能一体机机器界面" />
+	<img style="height:160px" src="items/screenshots/all_in_one_machine.png" alt="多功能一体机机器界面" />
 	<figcaption>图 多功能一体机界面</figcaption>
 </figure>
 
@@ -2337,7 +2337,7 @@
 </tbody></table>
 
 <figure>
-	<img style="height:200px" src="items/screenshots/trade_machine.png" alt="交易机机器界面" />
+	<img style="height:160px" src="items/screenshots/trade_machine.png" alt="交易机机器界面" />
 	<figcaption>图 交易机机器界面</figcaption>
 </figure>
 
@@ -3205,7 +3205,7 @@
 	</span></td></tr>
 </tbody></table>
 <figure>
-	<img style="height:200px" src="items/screenshots/item_processer.png" alt="物品处理机界面" />
+	<img style="height:160px" src="items/screenshots/item_processer.png" alt="物品处理机界面" />
 	<figcaption>图 物品处理机界面</figcaption>
 </figure>
 <p>左上方放入工具，左侧放入材料，机器会以每刻1次的速度工作。每次工作时，工具若有耐久会消耗1点耐久，否则不会被消耗。工具可以是原版任意材质。</p>
@@ -3313,15 +3313,15 @@
 	<td><a class="ui warped_wart_block" title="诡异疣块"></a></td>
 	<td><a class="ui brown_mushroom_block" title="棕色蘑菇方块"></a></td>
 	<td><a class="ui red_mushroom_block" title="红色蘑菇方块"></a></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
+	<th rowspan="2"><a class="ui crafting_table" title="工作台"></a></th>
+	<td><a class="ui sugar_cane" title="甘蔗"></a></td>
+	<td><a class="ui oak_planks" title="橡木木板"><span class="stack">5</span></a></td>
+	<td><a class="ui spruce_planks" title="云杉木板"><span class="stack">5</span></a></td>
+	<td><a class="ui birch_planks" title="白桦木板"><span class="stack">5</span></a></td>
+	<td><a class="ui jungle_planks" title="丛林木板"><span class="stack">5</span></a></td>
+	<td><a class="ui acacia_planks" title="金合欢木板"><span class="stack">5</span></a></td>
+	<td><a class="ui dark_oak_planks" title="深色橡木木板"><span class="stack">5</span></a></td>
+	<td><a class="ui iron_ingot" title="铁锭"><span class="stack">5</span></a></td>
 	<td></td>
 </tr>
 <tr>
@@ -3335,15 +3335,14 @@
 	<td><a class="ui warped_fungus" title="诡异菌"></a></td>
 	<td><a class="ui brown_mushroom" title="棕色蘑菇"></a></td>
 	<td><a class="ui red_mushroom" title="红色蘑菇"></a></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui paper" title="纸"></a></td>
+	<td><a class="ui oak_boat" title="橡木船"></a></td>
+	<td><a class="ui spruce_boat" title="云杉木船"></a></td>
+	<td><a class="ui birch_boat" title="白桦木船"></a></td>
+	<td><a class="ui jungle_boat" title="丛林木船"></a></td>
+	<td><a class="ui acacia_boat" title="金合欢船"></a></td>
+	<td><a class="ui dark_oak_boat" title="深色橡木船"></a></td>
+	<td><a class="ui minecart" title="矿车"></a></td>
 	<td></td>
 </tr>
 <tr>
@@ -3532,7 +3531,7 @@
 	<td><a href="#矮雪轮" class="ui ci silene_pendula" title="矮雪轮"></a></td>
 	<td><a href="#艾草" class="ui ci artemisia_argyi" title="艾草"></a></td>
 	<td><a class="ui carrot" title="胡萝卜"></a></td>
-	<td colspan="3">任意可烧炼方块</td>
+	<td colspan="3">任意可烧炼物品</td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -3564,20 +3563,20 @@
 	<td><a class="ui black_stained_glass" title="染色玻璃"></a></td>
 	<td><a class="ui black_stained_glass_pane" title="染色玻璃板"></a></td>
 	<td><a class="ui purple_terracotta" title="彩色陶瓦"></a></td>
-	<td><a class="ui green_candles" title="彩色蜡烛"></a></td>
+	<td><a class="ui cyan_candle" title="彩色蜡烛"></a></td>
 	<td><a class="ui sponge" title="海绵"></a></td>
 	<td colspan="2"><a class="ui lava_bucket" title="熔岩桶"></a></td>
 	<td><a class="ui sticky_piston" title="黏性活塞"></a></td>
 	<td><a class="ui filled_map" title="地图"></a></td>
 	<td><a class="ui glass_bottle" title="玻璃瓶"></a></td>
 	<td><a class="ui black_concrete_powder" title="混凝土粉末"></a></td>
-	<td><a class="ui ci broken_red_coat" title="皮革盔甲"></a></td>
-	<td><a class="ui leather_horse_armor" title="皮革马铠"></a></td>
-	<td><a class="ui banner_blue_mojang" title="旗帜"></a></td>
 	<td><a class="ui ci dye_stick" title="染色棒"></a></td>
-	<td></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui copper_block" title="铜块"></a></td>
+	<td><a class="ui lightly_weathered_copper_block" title="轻度锈蚀的铜块"></a></td>
+	<td><a class="ui semi_weathered_copper_block" title="中度锈蚀的铜块"></a></td>
+	<td><a class="ui cut_copper" title="切制铜块"></a></td>
+	<td><a class="ui lightly_weathered_cut_copper" title="轻度锈蚀的切制铜块"></a></td>
+	<td><a class="ui semi_weathered_cut_copper" title="中度锈蚀的切制铜块"></a></td>
 	<td></td>
 	<td></td>
 </tr>
@@ -3585,7 +3584,7 @@
 	<td><a class="ui glass" title="玻璃"></a></td>
 	<td><a class="ui glass_pane" title="玻璃板"></a></td>
 	<td><a class="ui terracotta" title="陶瓦"></a></td>
-	<td><a class="ui candles" title="蜡烛"></a></td>
+	<td><a class="ui candle" title="蜡烛"></a></td>
 	<td><a class="ui wet_sponge" title="湿海绵"></a></td>
 	<td colspan="2"><a class="ui obsidian" title="黑曜石"></a>
 		<a class="ui bucket" title="桶"></a></td>
@@ -3593,13 +3592,13 @@
 	<td><a class="ui map" title="空地图"></a></td>
 	<td><a class="ui water_bottle" title="水瓶"></a></td>
 	<td><a class="ui black_concrete" title="混凝土"></a></td>
-	<td><a class="ui leather_chestplate" title="去掉染色的皮革盔甲"></a></td>
-	<td><a class="ui leather_horse_armor" title="去掉染色的皮革马铠"></a></td>
-	<td><a class="ui white_banner" title="去掉图案的旗帜"></a></td>
 	<td><a class="ui ci dye_stick" title="去掉颜色的染色棒"></a></td>
-	<td></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui lightly_weathered_copper_block" title="轻度锈蚀的铜块"></a></td>
+	<td><a class="ui semi_weathered_copper_block" title="中度锈蚀的铜块"></a></td>
+	<td><a class="ui weathered_copper_block" title="锈蚀的铜块"></a></td>
+	<td><a class="ui lightly_weathered_cut_copper" title="轻度锈蚀的切制铜块"></a></td>
+	<td><a class="ui semi_weathered_cut_copper" title="中度锈蚀的切制铜块"></a></td>
+	<td><a class="ui weathered_cut_copper" title="锈蚀的切制铜块"></a></td>
 	<td></td>
 	<td></td>
 </tr>
@@ -3653,7 +3652,7 @@
 	</span></td></tr>
 </tbody></table>
 <figure>
-	<img style="height:200px" src="items/screenshots/mob_projector.png" alt="生物投影仪界面" />
+	<img style="height:160px" src="items/screenshots/mob_projector.png" alt="生物投影仪界面" />
 	<figcaption>图 生物投影仪界面</figcaption>
 </figure>
 <p>生物投影仪被原版红石元件强充能时会停止工作。将材料放入中间3个方格，则会开始进行工作。最上方栏位必须为鸡蛋，其它2种材料顺序可以交换。当材料合适时，左侧会显示生物图案，累计达到10秒后会在下方两米处生成相应生物。</p>
@@ -3747,6 +3746,14 @@
 		<a class="ui egg" title="鸡蛋"></a>
 		<a class="ui ink_sac" title="墨囊"></a>
 		<a class="ui salmon" title="鲑鱼"></a>
+		<a class="ui xp_orb" title="经验"><span class="stack">4</span></a>
+	</td>
+</tr>
+<tr><td>荧光鱿鱼</td>
+	<td><a class="ui ci mob_glow_squid" title="荧光鱿鱼"></a></td>
+	<td><a class="ui egg" title="鸡蛋"></a>
+		<a class="ui ink_sac" title="墨囊"></a>
+		<a class="ui glowstone_dust" title="荧石粉"></a>
 		<a class="ui xp_orb" title="经验"><span class="stack">4</span></a>
 	</td>
 </tr>
@@ -3989,7 +3996,7 @@
 <tr><td>豹猫(10%)</td>
 	<td><a class="ui ci mob_ocelot" title="豹猫"></a></td>
 </tr>
-<tr><td>马</td>
+<tr><td>马(80%)</td>
 	<td><a class="ui ci mob_horse" title="马"></a></td>
 	<td rowspan="3"><a class="ui egg" title="鸡蛋"></a>
 		<a class="ui leather" title="皮革"></a>
@@ -4147,7 +4154,7 @@
 <td><span class="oldversion">1.10.x</span></td></tr>
 </tbody></table>
 <figure>
-	<img style="height:200px" src="items/screenshots/beacon_enhancer.png" alt="信标增强器机器界面" />
+	<img style="height:160px" src="items/screenshots/beacon_enhancer.png" alt="信标增强器机器界面" />
 	<figcaption>图 信标增强器机器界面</figcaption>
 </figure>
 <figure>
@@ -4155,10 +4162,10 @@
 	<figcaption>图 全地图信标和信标增强器</figcaption>
 </figure>
 <p>信标增强器被原版红石元件强充能时会停止工作。信标增强器下方为激活的信标才会工作。左侧按钮用于选择对玩家生效的正面状态效果，右侧按钮用于选择对非玩家生物生效的负面状态效果，最右侧按钮用于选择负面状态效果对所有非玩家生物还是仅怪物生效，使用左键或Q键切换。对村民无效。</p>
-<p>对玩家生效的正面状态效果包括：抗火、夜视、水下呼吸、隐身、饱和、连锁，对非玩家生物生效的负面状态效果包括：虚弱、缓慢、发光、中毒、凋零、吸引(将附近的生物传送至信标增强仪上方)。影响范围基于下方的信标等级，为半径=10×(等级+1)的球形区域。</p>
-<p>对已放置的信标增强器按下右键会打开机器界面，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的正面效果范围提升至全地图，负面提升至128米。</p>
-<p><span class="oldversion">1.10.x-1.11.1</span> 放置/破坏信标增强仪可以添加/取消当前区块常加载。</p>
-<p><span class="oldversion">1.10.x</span> 如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强仪的效果范围提升至全地图(吸引范围128米)。</p>
+<p>对玩家生效的正面状态效果包括：抗火、夜视、水下呼吸、隐身、饱和、连锁，对非玩家生物生效的负面状态效果包括：虚弱、缓慢、发光、中毒、凋零、吸引(将附近的生物传送至信标增强器上方)。影响范围基于下方的信标等级，为半径=10×(等级+1)的球形区域。</p>
+<p>对已放置的信标增强器按下右键会打开机器界面，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强器的正面效果范围提升至全地图，负面提升至128米。</p>
+<p><span class="oldversion">1.10.x-1.11.1</span> 放置/破坏信标增强器可以添加/取消当前区块常加载。</p>
+<p><span class="oldversion">1.10.x</span> 如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强器的效果范围提升至全地图(吸引范围128米)。</p>
 
 <h3 id="金砧">金砧 <code>cpp:golden_anvil</code></h3>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
@@ -4177,7 +4184,7 @@
 	</span></td></tr>
 </tbody></table>
 <figure>
-	<img style="height:200px" src="items/screenshots/golden_anvil.png" alt="金砧机器界面" />
+	<img style="height:160px" src="items/screenshots/golden_anvil.png" alt="金砧机器界面" />
 	<figcaption>图 金砧机器界面</figcaption>
 </figure>
 
@@ -4236,7 +4243,7 @@
 </tbody></table>
 
 <figure>
-	<img style="height:200px" src="items/screenshots/color_palette.png" alt="调色板界面" />
+	<img style="height:160px" src="items/screenshots/color_palette.png" alt="调色板界面" />
 	<figcaption>图 调色板界面</figcaption>
 </figure>
 <p><span class="version">1.11.2</span> 右上方放入待染色的物品，下方16个栏位放入染料，上方为调整颜色的选项，右下方为染色后的预览，点击右方“确定染色”按钮，则会消耗相应的染料对物品进行染色，可以一次性染色多个物品。</p>
@@ -4297,6 +4304,10 @@
 <a class="ui ci empty_bookshelf7"></a>
 <p>破坏书架掉落。拥有中间3格可存放物品的栏位，外观会随着内部物品占用的栏位而变化。若其中恰好放入了三本书，则会自动转变为书架。</p>
 
+<figure>
+	<img style="height:160px" src="items/screenshots/empty_bookshelf.png" title="空书架" />
+	<figcaption>图 空书架</figcaption>
+</figure>
 <h3 id="插件">插件</h3>
 <table><thead><tr>
 	<th style="width:5em;">产物</th>
@@ -4336,7 +4347,7 @@
 		<a class="ci low_temperature_plugin" title="低温插件"></a>
 	</span></td>
 	<td><code>cpp:low_temperature_plugin</code><br />
-		主手持有右击<a href="#多功能一体机">多功能一体机</a>安装。</td>
+		Shift右键<a href="#多功能一体机">多功能一体机</a>安装。</td>
 </tr>
 <tr><th><strong id="低压插件">低压插件</strong></th>
 	<td><a href="#附魔之瓶">附魔之瓶</a>+<a href="#附魔钻石">附魔钻石</a>+<a href="#附魔金锭">附魔金锭</a>+<a href="#空白插件">空白插件</a>+玻璃+<a href="#天空之翼">天空之翼</a></td>
@@ -4353,7 +4364,7 @@
 		<a class="ci low_pressure_plugin" title="低压插件"></a>
 	</span></td>
 	<td><code>cpp:low_pressure_plugin</code><br />
-		主手持有右击<a href="#多功能一体机">多功能一体机</a>安装。</td>
+		Shift右键<a href="#多功能一体机">多功能一体机</a>安装。</td>
 </tr>
 <tr><th><strong id="高温插件">高温插件</strong></th>
 	<td><a href="#附魔之瓶">附魔之瓶</a>+<a href="#附魔钻石">附魔钻石</a>+<a href="#附魔金锭">附魔金锭</a>+<a href="#空白插件">空白插件</a>+熔岩桶+<a href="#火焰之星">火焰之星</a></td>
@@ -4370,7 +4381,7 @@
 		<a class="ci high_temperature_plugin" title="高温插件"></a>
 	</span></td>
 	<td><code>cpp:high_temperature_plugin</code><br />
-		主手持有右击<a href="#多功能一体机">多功能一体机</a>安装。</td>
+		Shift右键<a href="#多功能一体机">多功能一体机</a>安装。</td>
 </tr>
 <tr><th><strong id="高压插件">高压插件</strong></th>
 	<td><a href="#附魔之瓶">附魔之瓶</a>+<a href="#附魔钻石">附魔钻石</a>+<a href="#附魔金锭">附魔金锭</a>+<a href="#空白插件">空白插件</a>+活塞+<a href="#山脉之肢">山脉之肢</a></td>
@@ -4387,7 +4398,7 @@
 		<a class="ci high_pressure_plugin" title="高压插件"></a>
 	</span></td>
 	<td><code>cpp:high_pressure_plugin</code><br />
-		主手持有右击<a href="#多功能一体机">多功能一体机</a>安装。</td>
+		Shift右键<a href="#多功能一体机">多功能一体机</a>安装。</td>
 </tr>
 <tr><th><strong id="圆石插件">圆石插件</strong></th>
 	<td><a href="#附魔之瓶">附魔之瓶</a>+<a href="#附魔钻石">附魔钻石</a>+<a href="#附魔金锭">附魔金锭</a>+<a href="#空白插件">空白插件</a>+<a href="#附魔铁锭">附魔铁锭</a>+石镐</td>
@@ -6385,7 +6396,7 @@
 </tbody></table>
 
 <h3 id="勤劳之手">勤劳之手 <code>cpp:industrious_hand</code></h3>
-<p>放置在物品展示框内时，若上方2格的2米内有骨粉且当前位置为：<br />小麦/甜菜根/胡萝卜/土豆/竹子/向日葵/丁香/玫瑰丛/牡丹/可可豆/甜浆果/海带/垂泪藤/缠怨藤，会消耗1个骨粉有几率生成相应作物的掉落物；<br />草/蕨/海草，以及3米内有剪刀时，会消耗1个骨粉和剪刀1点耐久并生成相应草的物品。</p>
+<p>放置在物品展示框内时，若上方2格的2米内有骨粉且当前位置为：<br />小麦/甜菜根/胡萝卜/土豆/竹子/向日葵/丁香/玫瑰丛/牡丹/可可豆/甜浆果/海带/垂泪藤/缠怨藤，会消耗1个骨粉有几率生成相应作物的掉落物；<br />草/蕨/海草/荧光地衣，以及3米内有剪刀时，会消耗1个骨粉和剪刀1点耐久并生成相应草的物品。</p>
 <p><span class="oldversion">1.10.x</span> 使用钻石锄合成。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#稀土玻璃">稀土玻璃</a>+<a href="#末影人头">末影人头</a>+下界合金锄+<a href="#钢化玻璃">钢化玻璃</a></td>
@@ -10549,7 +10560,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-01-21</p>
+<p>最后更新 2021-01-25</p>
 </footer>
 
 </article>
