--- a/test.html
+++ b/test.html
@@ -19,20 +19,17 @@
 		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:10%;">版本</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:90%;">变动</th></tr>
 	</thead>
 	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了20种农作物，可种植和杂交。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在魔法作物可以自然生成在主世界了。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="4">1.9</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了花草，用于替代作物。</td></tr>
-			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">种子种下成熟后破坏得到花草。</td></tr>
-			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">烧炼而不是合成成对应物。</td></tr>
-			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">在合成器中合成为3个对应种子。</td></tr>
-			<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了成熟花草也可以在多功能一体机繁殖为金合欢的问题。</td></tr>
-			<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在仅在花世界天然生成。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.11.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在花草可以放入花盆了。</td></tr>
-			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了不能用于堆肥的问题。</td></tr>
-			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修复了不能放置在玩家脚下的问题。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.7</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了海洋之心。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.9</th><td style="border:1px solid #aaa;border-collapse:collapse;">鱼被玩家杀死有几率掉落。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改海洋之心的名称为水晶之心，id修改为cpp:heart_of_crystal。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.12</th><td style="border:1px solid #aaa;border-collapse:collapse;">美西螈和荧光鱿鱼被玩家杀死有几率掉落。</td></tr>
 	</tbody>
 </table> 
-
+现在有几率掉落水晶之心。
+<tr><td style="border:1px solid #aaa;border-collapse:collapse;">破坏书架掉落空书架和3本书。</td></tr>
+<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.9</th><td style="border:1px solid #aaa;border-collapse:collapse;">实际方块替换为木桶。</td></tr>
+<tr><td style="border:1px solid #aaa;border-collapse:collapse;">移除合成配方。</td></tr>
+<tr><td style="border:1px solid #aaa;border-collapse:collapse;">放入3本书可以得到书架。</td></tr>
 
 <table style="border:1px solid #aaa;border-collapse:collapse;" align="left">
 	<thead style="border:1px solid rgb(143, 134, 134);border-collapse:collapse;">
