--- a/index.html
+++ b/index.html
@@ -384,26 +384,26 @@
 <p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 642167529</a>(入群答案纸片人)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
-<p>其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含1.10及以上版本的内容。</p>
+<p>其它链接<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>未必能及时更新。本页面仅包含v1.10及以上版本的内容。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
-	<th>下载地址</th></tr></thead>
+	<th>下载地址</th><th>实现与安装方式</th></tr></thead>
 <tbody>
 	<tr>
-		<td>Java版 21w03a</td>
-		<td>v1.12-0129</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0129">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0129">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0129.zip">其它</a></td>
+		<td>Java版 21w05b</td>
+		<td>v1.12-0209</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0209">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0209">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0209.zip">其它</a></td>
+		<td rowspan="4">为数据包和资源包二合一</td>
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.5</td>
-		<td>v1.11.2-0129</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0129">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0129">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0129.zip">其它</a></td>
+		<td>v1.11.2-0209</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0209">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0209">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0209.zip">其它</a></td>
 	</tr>
-	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td>Java版 1.16-1.16.1</td>
 		<td>v1.11.1</td>
@@ -411,7 +411,6 @@
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.1">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">其它</a></td>
 	</tr>
-	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td>Java版 1.15.2</td>
 		<td>v1.10.11</td>
@@ -419,10 +418,39 @@
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">其它</a></td>
 	</tr>
+	<tr>
+		<td>Java版 1.14.x</td>
+		<td>v1.9.24</td>
+		<td>群内</td>
+		<td rowspan="2">为数据包和资源包</td>
+	</tr>
+	<tr>
+		<td>Java版 1.13.x</td>
+		<td>v1.8.4</td>
+		<td>群内</td>
+	</tr>
+	<tr>
+		<td>Java版 1.12.x</td>
+		<td>v1.7.4</td>
+		<td>群内</td>
+		<td>为函数</td>
+	</tr>
+	<tr>
+		<td>Java版 1.11</td>
+		<td>v1.5.2</td>
+		<td>群内</td>
+		<td rowspan="2">为结构方块</td>
+	</tr>
+	<tr>
+		<td>Java版 1.10</td>
+		<td>v1.1</td>
+		<td>群内</td>
+	</tr>
 </tbody></table>
 
 <p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。</p>
 <!-- 安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a> -->
+<p>下载后的文件需要复制两份分别作为数据包和资源包来安装。</p>
 <ul>
 	<li>安装数据包：<ul>
 		<li>如果是新的世界，在生成世界时可以在世界预设中点击<code>数据包</code>，将下载好的文件拖拽进打开的界面，并选择至右侧以启用。</li>
@@ -471,8 +499,8 @@
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 8Index LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 大吃货 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
-<!--一米八微笑 250 明月庄主 250 Rhythm萱8Index 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣大吃货 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
+<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 8Index LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 Longhorn Build 4074 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 大吃货 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
+<!--一米八微笑 250 明月庄主 250 Rhythm萱8Index 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64  Longhorn Build 4074 66匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣大吃货 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason、Ph-苯、Cjsah等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
@@ -493,7 +521,7 @@
 </figure>
 
 <h3 id="玉世界">玉世界</h3>
-<p><span class="oldversion">1.11.1</span> 玉世界生物群系固定为温暖海洋。其中裸露的沙子下掩埋着宝箱。将珊瑚块摆放成3*4的框形并点火即可激活至玉世界的传送门。</p>
+<p><span class="oldversion">1.11.1</span> 玉世界生物群系固定为温暖海洋。其中受潮的的沙子下掩埋着宝箱。将珊瑚块摆放成3*4的框形并点火即可激活至玉世界的传送门。</p>
 
 <h3 id="苦力怕地牢">苦力怕地牢</h3>
 <p><span class="oldversion">1.10</span> 原版主世界的地牢的刷怪笼有几率为苦力怕刷怪笼。</p>
@@ -1933,14 +1961,14 @@
 	<td>2</td>
 </tr>
 <tr><td><a class="ui sugar_cane"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
-	<td>可可豆仙人掌甘蔗蘑菇垂泪藤<br />缠怨藤藤蔓下界疣睡莲花+<a href="#肥料">肥料</a></td>
+	<td>甘蔗/可可豆/仙人掌/蘑菇/垂泪藤/缠怨藤/藤蔓<br />下界疣/睡莲/花+<a href="#肥料">肥料</a></td>
 	<td><a class="ui sugar_cane"><span class="stack">4</span></a></td>
 	<td>4 对应植物</td>
 	<td>2</td>
 	<td>2</td>
 </tr>
 <tr><td><a class="ui bamboo"></a><a href="#肥料" class="ui ci fertilizer"></a></td>
-	<td>竹子甜浆果海带+<a href="#肥料">肥料</a></td>
+	<td>竹子/甜浆果/海带/荧光浆果+<a href="#肥料">肥料</a></td>
 	<td><a class="ui bamboo"><span class="stack">8</span></a></td>
 	<td>8 对应植物</td>
 	<td>2</td>
@@ -3572,11 +3600,11 @@
 	<td><a class="ui black_concrete_powder" title="混凝土粉末"></a></td>
 	<td><a class="ui ci dye_stick" title="染色棒"></a></td>
 	<td><a class="ui copper_block" title="铜块"></a></td>
-	<td><a class="ui lightly_weathered_copper_block" title="轻度锈蚀的铜块"></a></td>
-	<td><a class="ui semi_weathered_copper_block" title="中度锈蚀的铜块"></a></td>
+	<td><a class="ui exposed_copper_block" title="受潮的铜块"></a></td>
+	<td><a class="ui weathered_copper_block" title="锈蚀铜块"></a></td>
 	<td><a class="ui cut_copper" title="切制铜块"></a></td>
-	<td><a class="ui lightly_weathered_cut_copper" title="轻度锈蚀的切制铜块"></a></td>
-	<td><a class="ui semi_weathered_cut_copper" title="中度锈蚀的切制铜块"></a></td>
+	<td><a class="ui exposed_cut_copper" title="受潮的切制铜块"></a></td>
+	<td><a class="ui weathered_cut_copper" title="锈蚀的切制铜块"></a></td>
 	<td></td>
 	<td></td>
 </tr>
@@ -3593,12 +3621,12 @@
 	<td><a class="ui water_bottle" title="水瓶"></a></td>
 	<td><a class="ui black_concrete" title="混凝土"></a></td>
 	<td><a class="ui ci dye_stick" title="去掉颜色的染色棒"></a></td>
-	<td><a class="ui lightly_weathered_copper_block" title="轻度锈蚀的铜块"></a></td>
-	<td><a class="ui semi_weathered_copper_block" title="中度锈蚀的铜块"></a></td>
-	<td><a class="ui weathered_copper_block" title="锈蚀的铜块"></a></td>
-	<td><a class="ui lightly_weathered_cut_copper" title="轻度锈蚀的切制铜块"></a></td>
-	<td><a class="ui semi_weathered_cut_copper" title="中度锈蚀的切制铜块"></a></td>
+	<td><a class="ui exposed_copper_block" title="受潮的铜块"></a></td>
+	<td><a class="ui weathered_copper_block" title="锈蚀铜块"></a></td>
+	<td><a class="ui oxidized_copper_block" title="氧化的铜块"></a></td>
+	<td><a class="ui exposed_cut_copper" title="受潮的切制铜块"></a></td>
 	<td><a class="ui weathered_cut_copper" title="锈蚀的切制铜块"></a></td>
+	<td><a class="ui oxidized_cut_copper" title="氧化的切制铜块"></a></td>
 	<td></td>
 	<td></td>
 </tr>
@@ -4165,6 +4193,7 @@
 <p>对玩家生效的正面状态效果包括：抗火、夜视、水下呼吸、隐身、饱和、连锁，对非玩家生物生效的负面状态效果包括：虚弱、缓慢、发光、中毒、凋零、吸引(将附近的生物传送至信标增强器上方)。影响范围基于下方的信标等级，为半径=10×(等级+1)的球形区域。</p>
 <p>对已放置的信标增强器按下右键会打开机器界面，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强器的正面效果范围提升至全地图，负面提升至128米。</p>
 <p>吸引模式注意及时处理生物，否则可能引起苦力怕爆炸等后果导致损失。</p>
+<p><span class="version">1.11.2起</span> 信标增强器可以加速影响范围内的机器的工作。根据信标等级，<a href="#多功能一体机">多功能一体机</a>、<a href="#交易机">交易机</a>和<a href="#生物投影仪">生物投影仪</a>的工作速度提升为原来的2、3、4、5、10倍。</p>
 <p><span class="oldversion">1.10.x-1.11.1</span> 放置/破坏信标增强器可以添加/取消当前区块常加载。</p>
 <p><span class="oldversion">1.10.x</span> 如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强器的效果范围提升至全地图(吸引范围128米)。</p>
 
@@ -4193,6 +4222,8 @@
 <p>上方放入物品，则机器会自动消耗相应经验从下方得到处理过的物品。</p>
 <table><thead><tr><th colspan="2">输入材料</th><th>效果</th><th>消耗经验</th>
 </tr></thead><tbody>
+<tr><td><a href="#效果附加">附加了效果</a>的物品</td><td><a href="#空气瓶">空气瓶</a></td><td>移除附加的效果</td><td>0</td></tr>
+<tr><td><a href="#属性附加">附加了属性</a>的物品</td><td>纸</td><td>移除附加的属性</td><td>0</td></tr>
 <tr><td><a href="#修复插件">修复插件</a></td><td>破损的工具</td><td>恢复2点耐久</td><td>1</td></tr>
 <tr><td><a href="#修复插件">修复插件</a></td><td><a href="#无线插件">无线插件</a></td><td>恢复附近32米内玩家的手持物或盔甲2点耐久</td><td>1</td></tr>
 <tr><td>附魔物品</td><td>书</td><td>转移魔咒至书</td><td>128</td></tr>
@@ -6161,8 +6192,10 @@
 
 <h3 id="压缩器">压缩器 <code>cpp:compressor</code></h3>
 <p>右击可将所指的64个物品压缩，重新扔出压缩后的物品可复原。</p>
+<p><span class="version">1.11.2起</span> 如果没有相应物品，则会压缩所指的容器内物品并重新整理。</p>
 <p>如果用于存储同种物品，一个箱子就可以存储5.84×10<sup>48</sup>个物品。</p>
 <p>放置压缩后的方块将会导致其退化为普通方块。</p>
+<p><a href="#调色板">调色板</a>可以处理压缩后的物品。扔出压缩后的<a href="#附魔之瓶">附魔之瓶</a>可以正常获得经验。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td><a href="#附魔之瓶">附魔之瓶</a>+<a href="#附魔钻石">附魔钻石</a>+<a href="#附魔金锭">附魔金锭</a>+活塞+<a href="#附魔铁锭">附魔铁锭</a>+<a href="#硅板">硅板</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -6326,6 +6359,7 @@
 
 <h3 id="搬箱器">搬箱器 <code>cpp:chest_transporter</code></h3>
 <p>Shift右键破坏容器，容器内的物品会保留。共26点耐久。</p>
+<p><span class="version">1.11.2起</span> 如果目标容器是箱子且仅包含一格物品，则会掉落为一个礼物。右键后可以获得相应物品。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><td>木棍+<a href="#附魔铁锭">附魔铁锭</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -10159,7 +10193,7 @@
 
 
 <h3 id="箱子整理">箱子整理</h3>
-<p>当玩家主手持有木棍右击箱子/潜影箱后，容器内的物品会被整理。</p>
+<p><span class="oldversion">1.10-1.11.1</span> 当玩家主手持有木棍右击箱子/潜影箱后，容器内的物品会被整理。</p>
 <p><span class="oldversion">1.10</span> 使用命令<code>/trigger cppTrim</code>来整理自己背包(不含快捷栏)。</p>
 
 <h3 id="自动插火把">自动插火把</h3>
@@ -10520,7 +10554,7 @@
 <tr><td><span class="ui challenge"><a class="ci compressor"></a></span></td>
 <th>叮当猫的口袋</th>
 	<td>八重……算了，三重吧</td>
-	<td>—</td>
+	<td>100点经验</td>
 	<td>参数测定</td>
 	<td>cpp:doraemon</td>
 </tr>
@@ -10554,14 +10588,14 @@
 	<a href="http://www.mcbbs.net/thread-696861-1-1.html"><img src="items/mcbbs.png" alt="Mcbbs" title="Minecraft(我的世界)中文论坛"></a>
 	<a href="https://www.mcmod.cn/class/1297.html"><img src="items/mcmod.png" alt="Mcbbs" title="MC百科"></a>
 	<a href="https://github.com/ruhuasiyu/CraftingPlusPlus"><img src="items/github.png" alt="GitHub" title="GitHub" /></a>
-	<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus"><img src="https://gitee.com/static/images/logo-en.svg" alt="Gitee" title="Gitee" /></a>
+	<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus"><img src="items/gitee.svg" alt="Gitee" title="Gitee" /></a>
 	<a href="https://afdian.net/@ruhuasiyu/"><img src="items/afdian.png" alt="爱发电" /></a>
 	<a href="./items/wechatcode.png"><img src="items/wechat.png" alt="微信赞赏码" /></a>
 	<a href="./items/alipaycode.png"><img src="items/alipay.png" alt="支付宝收钱码" /></a>
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-01-29</p>
+<p>最后更新 2021-02-09</p>
 </footer>
 
 </article>
