--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.5</td>
-		<td>v1.11.2-0224</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0224">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0224">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0224.zip">其它</a></td>
+		<td>v1.11.2</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16-1.16.1</td>
@@ -1537,8 +1537,10 @@
 
 <p>默认情形多功能一体机只能使用常压常温模式，玩家需要使用插件Shift右键机器来解锁相应模式，包括：<a href="#低温插件">低温插件</a>、<a href="#低压插件">低压插件</a>、<a href="#高温插件">高温插件</a>和<a href="#高压插件">高压插件</a>。</p>
 
+<p>多功能一体机配方中矿石变种可以代替原矿石，例如铁矿石(深板岩铁矿石)/金矿石(下界金矿石、深板岩金矿石)/红石矿石(深板岩红石矿石)/青金石矿石(深板岩青金石矿石)/钻石矿石(深板岩钻石矿石)。</p>
+
 <h4>高温高压</h4>
-<p>可以将两种不同的矿石混合烧炼并提高产出，不同的搭配拥有不同的倍率，倍率在模组首次加载时被确定，需要玩家测量参数以确定最佳组合。倍率为1.0~4.0倍，其中红石的基准数量为5，青金石的基准数量为6。支持煤矿石/铁矿石/金矿石(下界金矿石)/红石矿石/青金石矿石/绿宝石矿石/钻石矿石/下界石英矿石/铜矿石。</p>
+<p>可以将两种不同的矿石混合烧炼并提高产出，不同的搭配拥有不同的倍率，倍率在模组首次加载时被确定，需要玩家测量参数以确定最佳组合。倍率为1.0~4.0倍，其中红石的基准数量为5，青金石的基准数量为6。支持煤矿石/铁矿石/金矿石/红石矿石/青金石矿石/绿宝石矿石/钻石矿石/下界石英矿石/铜矿石。</p>
 
 <table>
 <thead><tr><th>输入</th><th>输出</th><th>经验</th><th>耗时</th></tr></thead><tbody>
@@ -1732,13 +1734,6 @@
 </tr>
 <tr><td><a class="ui gold_ore"></a><a class="ui flint"></a></td>
 	<td>金矿石+燧石</td>
-	<td><a href="#金粉" class="ui ci gold_dust"><span class="stack">2</span></a><a href="#铁粉" class="ui ci iron_dust"><span class="stack">10%</span></a></td>
-	<td>2 <a href="#金粉">金粉</a>+10% <a href="#铁粉">铁粉</a></td>
-	<td>4</td>
-	<td>10</td>
-</tr>
-<tr><td><a class="ui nether_gold_ore"></a><a class="ui flint"></a></td>
-	<td>下界金矿石+燧石</td>
 	<td><a href="#金粉" class="ui ci gold_dust"><span class="stack">2</span></a><a href="#铁粉" class="ui ci iron_dust"><span class="stack">10%</span></a></td>
 	<td>2 <a href="#金粉">金粉</a>+10% <a href="#铁粉">铁粉</a></td>
 	<td>4</td>
@@ -4230,10 +4225,10 @@
 <tr><td>有惩罚等级的盔甲或工具</td><td><a href="#月之碎片">月之碎片</a></td><td>移除惩罚等级</td><td>256</td></tr>
 <tr><td>有诅咒魔咒的盔甲或工具</td><td><a href="#附魔金苹果">附魔金苹果</a></td><td>移除所有诅咒魔咒</td><td>256</td></tr>
 <tr><td>拥有与上古卷轴同等级魔咒的盔甲或工具</td><td><a href="#上古卷轴">上古卷轴</a></td><td>魔咒等级+1</td><td>512</td></tr>
-<tr><td>本模组<a href="#烈焰红唇">头饰</a></td><td><a href="#属性附加">附加了属性</a>的头盔</td><td>转移属性至头饰</td><td>512</td></tr>
-<tr><td>鞘翅</td><td><a href="#属性附加">附加了属性</a>的胸甲</td><td>转移属性至鞘翅</td><td>512</td></tr>
+<tr><td>可佩戴在盔甲栏的物品</td><td><a href="#属性附加">附加了属性</a>的可佩戴在相同部位的物品</td><td>转移属性</td><td>512</td></tr>
 </tbody></table>
 <p>支持移除<a href="https://www.mcmod.cn/class/2135.html" title="随机附魔">随机附魔</a>的4种诅咒魔咒和<a href="https://www.mcmod.cn/class/2025.html" title="万象">万象</a>的2种诅咒魔咒。</p>
+<p>转移属性效果对于<a href="#护士帽">护士帽</a>幸运×1.1，对于<a href="#非酋帽">非酋帽</a>幸运×(-1.1)。</p>
 
 <h4>1.11.2 之前的版本</h4>
 <p>左侧依次放入已附魔物品、牺牲材料和64个附魔之瓶，则机器会自动从右侧得到处理过的物品。</p>
@@ -10592,7 +10587,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-02-24</p>
+<p>最后更新 2021-02-26</p>
 </footer>
 
 </article>
