--- a/index.html
+++ b/index.html
@@ -291,10 +291,16 @@
 	<li><a href="#阿拉伯婆婆纳"><span class="ci" style="background-position: -32px -1104px;"></span> 阿拉伯婆婆纳</a></li>
 	<li><a href="#矮雪轮"><span class="ci" style="background-position: -48px -1104px;"></span> 矮雪轮</a></li>
 	<li><a href="#艾草"><span class="ci" style="background-position: -128px -1200px;"></span> 艾草</a></li>
+	<li><a href="#迎春花"><span class="ci" style="background-position: -0px -1360px;"></span> 迎春花</a></li>
+	<li><a href="#勿忘我"><span class="ci" style="background-position: -16px -1360px;"></span> 勿忘我</a></li>
 	<li><a href="#蓝色妖姬"><span class="ci" style="background-position: -64px -1104px;"></span> 蓝色妖姬</a></li>
+	<li><a href="#艾草"><span class="ci" style="background-position: -32px -1360px;"></span> 蒲公英花丛</a></li>
 	<li><a href="#圣诞树"><span class="ci" style="background-position: -96px -352px;"></span> 圣诞树</a></li>
 	<li><a href="#圣诞花"><span class="ci" style="background-position: -112px -352px;"></span> 圣诞花</a></li>
 	<li><a href="#稻谷"><span class="ci" style="background-position: -64px -1184px;"></span> 稻谷</a></li>
+</ul><ul>
+	<li><a href="#番茄幼苗"><span class="ci" style="background-position: -112px -1344px;"></span> 番茄幼苗</a></li>
+	<li><a href="#草莓幼苗"><span class="ci" style="background-position: -128px -1344px;"></span> 草莓幼苗</a></li>
 	<li><a href="#水果树树苗"><span class="ci" style="background-position: -0px -352px;"></span> 水果树树苗</a></li>
 	<li><a href="#羊毛树树苗"><span class="ci" style="background-position: -16px -352px;"></span> 羊毛树树苗</a></li>
 	<li><a href="#矿石树树苗"><span class="ci" style="background-position: -32px -352px;"></span> 矿石树树苗</a></li>
@@ -390,11 +396,11 @@
 	<th>下载地址</th><th>实现与安装方式</th></tr></thead>
 <tbody>
 	<tr>
-		<td>Java版 21w07a</td>
-		<td>v1.12-0224</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0224">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0224">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0224.zip">其它</a></td>
+		<td>Java版 21w08a</td>
+		<td>v1.12-0306</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0306">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0306">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0306.zip">其它</a></td>
 		<td rowspan="5">为数据包和资源包二合一</td>
 	</tr>
 	<tr>
@@ -406,10 +412,10 @@
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.5</td>
-		<td>v1.11.2</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2.zip">其它</a></td>
+		<td>v1.11.3</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.3">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.3">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.3.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16-1.16.1</td>
@@ -528,7 +534,7 @@
 </figure>
 
 <h3 id="玉世界">玉世界</h3>
-<p><span class="oldversion">1.11.1</span> 玉世界生物群系固定为温暖海洋。其中受潮的的沙子下掩埋着宝箱。将珊瑚块摆放成3*4的框形并点火即可激活至玉世界的传送门。</p>
+<p><span class="oldversion">1.11.1</span> 玉世界生物群系固定为温暖海洋。其中沙子下掩埋着宝箱。将珊瑚块摆放成3*4的框形并点火即可激活至玉世界的传送门。</p>
 
 <h3 id="苦力怕地牢">苦力怕地牢</h3>
 <p><span class="oldversion">1.10</span> 原版主世界的地牢的刷怪笼有几率为苦力怕刷怪笼。</p>
@@ -3594,10 +3600,10 @@
 	<td><a class="ui black_concrete_powder" title="混凝土粉末"></a></td>
 	<td><a class="ui ci dye_stick" title="染色棒"></a></td>
 	<td><a class="ui copper_block" title="铜块"></a></td>
-	<td><a class="ui exposed_copper_block" title="受潮的铜块"></a></td>
-	<td><a class="ui weathered_copper_block" title="锈蚀铜块"></a></td>
+	<td><a class="ui exposed_copper_block" title="斑驳的铜块"></a></td>
+	<td><a class="ui weathered_copper_block" title="锈蚀的铜块"></a></td>
 	<td><a class="ui cut_copper" title="切制铜块"></a></td>
-	<td><a class="ui exposed_cut_copper" title="受潮的切制铜块"></a></td>
+	<td><a class="ui exposed_cut_copper" title="斑驳的切制铜块"></a></td>
 	<td><a class="ui weathered_cut_copper" title="锈蚀的切制铜块"></a></td>
 	<td></td>
 	<td></td>
@@ -3615,10 +3621,10 @@
 	<td><a class="ui water_bottle" title="水瓶"></a></td>
 	<td><a class="ui black_concrete" title="混凝土"></a></td>
 	<td><a class="ui ci dye_stick" title="去掉颜色的染色棒"></a></td>
-	<td><a class="ui exposed_copper_block" title="受潮的铜块"></a></td>
-	<td><a class="ui weathered_copper_block" title="锈蚀铜块"></a></td>
+	<td><a class="ui exposed_copper_block" title="斑驳的铜块"></a></td>
+	<td><a class="ui weathered_copper_block" title="锈蚀的铜块"></a></td>
 	<td><a class="ui oxidized_copper_block" title="氧化的铜块"></a></td>
-	<td><a class="ui exposed_cut_copper" title="受潮的切制铜块"></a></td>
+	<td><a class="ui exposed_cut_copper" title="斑驳的切制铜块"></a></td>
 	<td><a class="ui weathered_cut_copper" title="锈蚀的切制铜块"></a></td>
 	<td><a class="ui oxidized_cut_copper" title="氧化的切制铜块"></a></td>
 	<td></td>
@@ -4187,6 +4193,7 @@
 <p>对玩家生效的正面状态效果包括：抗火、夜视、水下呼吸、隐身、饱和、连锁，对非玩家生物生效的负面状态效果包括：虚弱、缓慢、发光、中毒、凋零、吸引(将附近的生物传送至信标增强器上方)。影响范围基于下方的信标等级，为半径=10×(等级+1)的球形区域。</p>
 <p>对已放置的信标增强器按下右键会打开机器界面，任何尝试放入容器非物品栏的物品会被返回到最近的玩家背包内。如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强器的正面效果范围提升至全地图，负面提升至128米。</p>
 <p>吸引模式注意及时处理生物，否则可能引起苦力怕爆炸等后果导致损失。</p>
+<p><span class="version">1.12起</span> 信标增强器下方信标而不是它自身被原版红石元件强充能时会停止工作。</p>
 <p><span class="version">1.11.2起</span> 信标增强器可以加速影响范围内的机器的工作。根据信标等级，<a href="#多功能一体机">多功能一体机</a>、<a href="#交易机">交易机</a>和<a href="#生物投影仪">生物投影仪</a>的工作速度提升为原来的2、3、4、5、10倍。</p>
 <p><span class="oldversion">1.10.x-1.11.1</span> 放置/破坏信标增强器可以添加/取消当前区块常加载。</p>
 <p><span class="oldversion">1.10.x</span> 如果下方信标的下方3×3区域为X形的5个日石和4个月石，则信标和信标增强器的效果范围提升至全地图(吸引范围128米)。</p>
@@ -8700,6 +8707,16 @@
 	<td><code>cpp:artemisia_argyi</code></td>
 	<td><a class="ui green_dye" title="绿色染料"></a></td>
 </tr>
+<tr><td><a class="ui ci primrose"></a></td>
+	<th><strong id="迎春花">迎春花</strong></th>
+	<td><code>cpp:primrose</code></td>
+	<td><a class="ui orange_dye" title="橙色染料"></a></td>
+</tr>
+<tr><td><a class="ui ci forget_me_not"></a></td>
+	<th><strong id="勿忘我">勿忘我</strong></th>
+	<td><code>cpp:forget_me_not</code></td>
+	<td><a class="ui light_blue_dye" title="淡蓝色染料"></a></td>
+</tr>
 </tbody></table>
 
 <h3 id="蓝色妖姬">蓝色妖姬 <code>cpp:blue_rose</code></h3>
@@ -8720,6 +8737,26 @@
 		<a class="empty"></a>
 		<a class="ci blue_rose" title="蓝色妖姬"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+	</span></td></tr>
+</tbody></table>
+
+<h3 id="蒲公英花丛">蒲公英花丛 <code>cpp:dandelion_bush</code></h3>
+<p><span class="version">1.12起</span>可以放入花盆。</p>
+<table><thead><tr><th>材料</th>
+	<th>合成配方</th>
+</tr></thead><tbody>	
+<tr><td>蒲公英</td>
+	<td><span class="ui cm" title="合成器">
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="dandelion" title="蒲公英"></a>
+		<a class="dandelion" title="蒲公英"></a>
+		<a class="dandelion" title="蒲公英"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="empty"></a>
+		<a class="ci dandelion_bush" title="蒲公英花丛"></a>
 	</span></td></tr>
 </tbody></table>
 
@@ -8769,6 +8806,12 @@
 <p>破坏草有几率得到稻谷，可以种植在任何土上。生长共4个阶段，完全成熟后破坏得到4份稻谷，否则只能得到1份稻谷。</p>
 <p><span class="version">1.11起</span> 必须邻近水，否则即使使用骨粉也不会生长。</p>
 <p><span class="oldversion">1.10</span> 下方如果不是耕地则会不定时弹出。下方必须是完全湿润的耕地，否则即使使用骨粉也不会生长。</p>
+
+<h3 id="番茄幼苗">番茄幼苗 <code>cpp:tomato_seedling</code></h3>
+<a class="ui ci tomato_seedling"></a><a class="ui ci tomato0"></a><a class="ui ci tomato1"></a><a class="ui ci tomato2"></a><a class="ui ci tomato3"></a><a class="ui ci tomato4"></a>
+<h3 id="草莓幼苗">草莓幼苗 <code>cpp:strawberry_seedling</code></h3>
+<a class="ui ci strawberry_seedling"></a><a class="ui ci strawberry0"></a><a class="ui ci strawberry1"></a><a class="ui ci strawberry2"></a><a class="ui ci strawberry3"></a><a class="ui ci strawberry4"></a>
+<p><span class="version">1.12起</span> 破坏草有几率得到番茄幼苗或草莓幼苗，只能种植在湿润耕地上，否则即使使用骨粉也不会生长。生长共5个阶段，完全成熟后破坏得到1~4份水果和1~4份幼苗，否则只能得到1份幼苗。</p>
 
 <h3 id="树">树</h3>
 <table><thead><tr><th>名称</th>
@@ -10587,7 +10630,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-02-26</p>
+<p>最后更新 2021-03-06</p>
 </footer>
 
 </article>
